syntax = "proto3";

package com.example.model;
option java_outer_classname = "ProtoModel";

message ListOfStrings {
  repeated string str = 1;
}

message RequestBody {
  bytes bytes = 1;
  string contentType = 2;
}

message Request {
  string url = 1;
  string method = 2;
  map<string, ListOfStrings> headers = 3;
  RequestBody body = 4;
}

message ResponseBody{
  bytes bytes = 1;
  string contentType = 2;
}

enum Protocol{
  HTTP_1_0 = 0;
  HTTP_1_1 = 1;
  SPDY_3 = 2;
  HTTP_2 = 3;
  H2_PRIOR_KNOWLEDGE = 4;
  QUIC = 5;
}

message Response{
  int32 code = 1;
  string message = 2;
  map<string, ListOfStrings> headers = 3;
  ResponseBody responseBody = 4;
  Protocol protocol = 5;
}

message Entry{
  Request request = 1;
  repeated Response responses = 2;
}
